fix bug with row labels overlapping with the navbar

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ body {
     height: 100%;
     width: 55pt;
     padding-top: 18pt;
+    z-index: 1;
 }
 
 .navLink {
